--- a/Resources/views/ckfinder.html.twig
+++ b/Resources/views/ckfinder.html.twig
@@ -4,6 +4,7 @@
     <title>CKFinder</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="robots" content="noindex, nofollow" />
+    <script type="text/javascript" src="{{ asset('bundles/sonatajquery/jquery-1.8.3.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/jonlilckfinder/ckfinder.js') }}"></script>
     <style type="text/css">
         body, html, iframe, #ckfinder {
@@ -139,6 +140,12 @@
         ckfinder.replace( 'ckfinder', config );
     })();
     //]]>
+
+    (function ($, window) {
+        $(document).ready(function () {
+            $('#ckfinder').css('visibility', 'visable');
+        });
+    })(jQuery, this);
 </script>
 </body>
 </html>
