absoulute path to image to image

--- a/Resources/views/ckfinder.html.twig
+++ b/Resources/views/ckfinder.html.twig
@@ -92,8 +92,7 @@
                 action = get( 'action' );
 
             var parentWindow = ( window.parent == window ) ? window.opener : window.parent;
-            var full_url = '{{ url('home') }}';
-            config.basePath = full_url.replace(document.location.origin + '/','');
+            config.basePath = '{{ url('home') }}';
             switch ( action )
             {
                 case 'js':
